k8s/manifests/Deployment.yaml
# Deployment Yaml file for Go-Web-App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-deployment
  labels:
    app: gowebapp
spec:
  replicas: 3
  selector:
    matchLabels:
       app: gowebapp
  template:
    metadata:
      labels:
        app: gowebapp
    spec:
      containers:
      - name: go-portfolio
        image: rahulnani2/go-web-app:v1
        ports:
        - containerPort: 8080
