k8s/manifests/Service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: gowebapp-service
  labels:
    app: gowebapp-service
spec:
  selector:
    app: gowebapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
