k8s/manifests/ingress.yaml
# Ingress for the Application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-web-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  gowebapp-service
            port:
              number: 80
